Fixed Loading Not showing issues.

--- a/src/ui/components/loading/LoadingSpinner.module.css
+++ b/src/ui/components/loading/LoadingSpinner.module.css
@@ -2,8 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100dvh;
-    width: 100%;
 }
 
 .loading-spinner-icon {
