--- a/src/ui/screens/messaging/components/ChatScreenContent.module.css
+++ b/src/ui/screens/messaging/components/ChatScreenContent.module.css
@@ -61,6 +61,10 @@
     height: 100px;
 }
 
+.chat-messages-container.loading {
+    align-content: center;
+}
+
 .chat-input-area {
     position: fixed;
     width: 100%;
